// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Component API/Popover Dev 1`] = `
<div
  dir="ltr"
>
  <div
    style={
      Object {
        "margin": "220px",
      }
    }
  >
    <div
      className="fd-popover"
    >
      <div
        onFocus={[Function]}
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        <div
          className="fd-popover__control"
        >
          <button
            aria-controls="fd-mocked-short-id"
            aria-expanded={false}
            aria-haspopup={true}
            className="fd-button fd-button--transparent sap-icon--navigation-up-arrow"
            onClick={[Function]}
            onKeyPress={[Function]}
            role="button"
            tabIndex={0}
            type="button"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Component API/Popover Disable Edge Detection 1`] = `
<div
  dir="ltr"
>
  <div
    className="fd-popover"
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <button
          aria-controls="fd-mocked-short-id"
          aria-expanded={false}
          aria-haspopup={true}
          className="fd-button fd-button--transparent sap-icon--navigation-up-arrow"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex={0}
          type="button"
        />
      </div>
    </div>
  </div>
  <div
    className="fd-popover"
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <button
          aria-controls="fd-mocked-short-id"
          aria-expanded={false}
          aria-haspopup={true}
          className="fd-button fd-button--transparent sap-icon--navigation-down-arrow"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex={0}
          type="button"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Component API/Popover No Arrow 1`] = `
<div
  dir="ltr"
>
  <div
    className="fd-popover"
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <span
          aria-controls="fd-mocked-short-id"
          aria-expanded={false}
          aria-haspopup={true}
          className="sap-icon--cart"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          style={
            Object {
              "fontSize": "1.5rem",
            }
          }
          tabIndex={0}
        />
      </div>
    </div>
  </div>
  <div
    className="fd-popover"
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <span
          aria-controls="fd-mocked-short-id"
          aria-expanded={false}
          aria-haspopup={true}
          className="fd-avatar fd-avatar--m fd-avatar--thumbnail fd-avatar--circle"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          style={
            Object {
              "backgroundImage": "url(./assets/nature.jpg)",
            }
          }
          tabIndex={0}
        />
      </div>
    </div>
  </div>
  <div
    className="fd-popover"
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <span
          aria-controls="fd-mocked-short-id"
          aria-expanded={false}
          aria-haspopup={true}
          className="fd-avatar fd-avatar--m sap-icon--money-bills fd-avatar--accent-color-6"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex={0}
        />
      </div>
    </div>
  </div>
  <div
    className="fd-popover"
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <span
          aria-controls="fd-mocked-short-id"
          aria-expanded={false}
          aria-haspopup={true}
          className="sap-icon--menu2"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          style={
            Object {
              "fontSize": "1.5rem",
            }
          }
          tabIndex={0}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Component API/Popover Out Of Boundaries 1`] = `
<div
  dir="ltr"
>
  <button
    className="fd-button"
    onClick={[Function]}
    type="button"
  >
    Show Dialog
  </button>
</div>
`;

exports[`Storyshots Component API/Popover Placements 1`] = `
<div
  dir="ltr"
>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "
            td {
                min-width: 3em;
                min-height: 3em;
            }
            ",
      }
    }
  />
  <table>
    <tbody>
      <tr>
        <td>
           
        </td>
      </tr>
      <tr>
        <td>
           
        </td>
      </tr>
      <tr>
        <td>
           
        </td>
      </tr>
      <tr>
        <td>
           
        </td>
      </tr>
      <tr>
        <td>
           
        </td>
      </tr>
      <tr>
        <td />
        <td />
        <td />
        <td />
        <td>
          <div
            className="fd-popover"
          >
            <div
              onFocus={[Function]}
              onMouseDown={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="fd-popover__control"
              >
                <button
                  aria-controls="fd-top-start-popover-placement-story"
                  aria-expanded={false}
                  aria-haspopup="menu"
                  className="fd-button fd-button--transparent sap-icon--navigation-up-arrow"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex={0}
                  type="button"
                >
                  Top-Start
                </button>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            className="fd-popover"
          >
            <div
              onFocus={[Function]}
              onMouseDown={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="fd-popover__control"
              >
                <button
                  aria-controls="fd-mocked-short-id"
                  aria-expanded={false}
                  aria-haspopup="menu"
                  className="fd-button fd-button--transparent sap-icon--navigation-up-arrow"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex={0}
                  type="button"
                >
                  Top
                </button>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            className="fd-popover"
          >
            <div
              onFocus={[Function]}
              onMouseDown={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="fd-popover__control"
              >
                <button
                  aria-controls="fd-mocked-short-id"
                  aria-expanded={false}
                  aria-haspopup="menu"
                  className="fd-button fd-button--transparent sap-icon--navigation-up-arrow"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex={0}
                  type="button"
                >
                  Top-End
                </button>
              </div>
            </div>
          </div>
        </td>
        <td />
      </tr>
      <tr>
        <td />
        <td />
        <td />
        <td>
          <div
            className="fd-popover"
          >
            <div
              onFocus={[Function]}
              onMouseDown={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="fd-popover__control"
              >
                <button
                  aria-controls="fd-mocked-short-id"
                  aria-expanded={false}
                  aria-haspopup="menu"
                  className="fd-button fd-button--transparent sap-icon--navigation-left-arrow"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex={0}
                  type="button"
                >
                  Left-Start
                </button>
              </div>
            </div>
          </div>
        </td>
        <td />
        <td />
        <td />
        <td>
          <div
            className="fd-popover"
          >
            <div
              onFocus={[Function]}
              onMouseDown={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="fd-popover__control"
              >
                <button
                  aria-controls="fd-mocked-short-id"
                  aria-expanded={false}
                  aria-haspopup="menu"
                  className="fd-button fd-button--transparent sap-icon--navigation-right-arrow"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex={0}
                  type="button"
                >
                  Right-Top
                </button>
              </div>
            </div>
          </div>
        </td>
      </tr>
      <tr>
        <td />
        <td />
        <td />
        <td>
          <div
            className="fd-popover"
          >
            <div
              onFocus={[Function]}
              onMouseDown={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="fd-popover__control"
              >
                <button
                  aria-controls="fd-mocked-short-id"
                  aria-expanded={false}
                  aria-haspopup="menu"
                  className="fd-button fd-button--transparent sap-icon--navigation-left-arrow"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex={0}
                  type="button"
                >
                  Left
                </button>
              </div>
            </div>
          </div>
        </td>
        <td />
        <td />
        <td />
        <td>
          <div
            className="fd-popover"
          >
            <div
              onFocus={[Function]}
              onMouseDown={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="fd-popover__control"
              >
                <button
                  aria-controls="fd-mocked-short-id"
                  aria-expanded={false}
                  aria-haspopup="menu"
                  className="fd-button fd-button--transparent sap-icon--navigation-right-arrow"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex={0}
                  type="button"
                >
                  Right
                </button>
              </div>
            </div>
          </div>
        </td>
      </tr>
      <tr>
        <td />
        <td />
        <td />
        <td>
          <div
            className="fd-popover"
          >
            <div
              onFocus={[Function]}
              onMouseDown={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="fd-popover__control"
              >
                <button
                  aria-controls="fd-mocked-short-id"
                  aria-expanded={false}
                  aria-haspopup="menu"
                  className="fd-button fd-button--transparent sap-icon--navigation-left-arrow"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex={0}
                  type="button"
                >
                  Left-End
                </button>
              </div>
            </div>
          </div>
        </td>
        <td />
        <td />
        <td />
        <td>
          <div
            className="fd-popover"
          >
            <div
              onFocus={[Function]}
              onMouseDown={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="fd-popover__control"
              >
                <button
                  aria-controls="fd-mocked-short-id"
                  aria-expanded={false}
                  aria-haspopup="menu"
                  className="fd-button fd-button--transparent sap-icon--navigation-right-arrow"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex={0}
                  type="button"
                >
                  Right-End
                </button>
              </div>
            </div>
          </div>
        </td>
      </tr>
      <tr>
        <td />
        <td />
        <td />
        <td />
        <td>
          <div
            className="fd-popover"
          >
            <div
              onFocus={[Function]}
              onMouseDown={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="fd-popover__control"
              >
                <button
                  aria-controls="fd-mocked-short-id"
                  aria-expanded={false}
                  aria-haspopup="menu"
                  className="fd-button fd-button--transparent sap-icon--navigation-down-arrow"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex={0}
                  type="button"
                >
                  Bottom-Start
                </button>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            className="fd-popover"
          >
            <div
              onFocus={[Function]}
              onMouseDown={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="fd-popover__control"
              >
                <button
                  aria-controls="fd-mocked-short-id"
                  aria-expanded={false}
                  aria-haspopup="menu"
                  className="fd-button fd-button--transparent sap-icon--navigation-down-arrow"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex={0}
                  type="button"
                >
                  Bottom
                </button>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            className="fd-popover"
          >
            <div
              onFocus={[Function]}
              onMouseDown={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="fd-popover__control"
              >
                <button
                  aria-controls="fd-mocked-short-id"
                  aria-expanded={false}
                  aria-haspopup="menu"
                  className="fd-button fd-button--transparent sap-icon--navigation-down-arrow"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex={0}
                  type="button"
                >
                  Bottom-End
                </button>
              </div>
            </div>
          </div>
        </td>
        <td />
      </tr>
      <tr>
        <td>
           
        </td>
      </tr>
      <tr>
        <td>
           
        </td>
      </tr>
      <tr>
        <td>
           
        </td>
      </tr>
      <tr>
        <td>
           
        </td>
      </tr>
      <tr>
        <td>
           
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Component API/Popover Width Sizing Types 1`] = `
<div
  dir="ltr"
>
  <div
    className="fd-popover"
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <button
          aria-controls="fd-mocked-short-id"
          aria-expanded={false}
          aria-haspopup={true}
          className="fd-button"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex={0}
          type="button"
        >
          widthSizingType: 
          <strong>
            '
            none
            '
          </strong>
        </button>
      </div>
    </div>
  </div>
  <div
    className="fd-popover"
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <button
          aria-controls="fd-mocked-short-id"
          aria-expanded={false}
          aria-haspopup={true}
          className="fd-button"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex={0}
          type="button"
        >
          widthSizingType: 
          <strong>
            '
            matchTarget
            '
          </strong>
        </button>
      </div>
    </div>
  </div>
  <div
    className="fd-popover"
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <button
          aria-controls="fd-mocked-short-id"
          aria-expanded={false}
          aria-haspopup={true}
          className="fd-button"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex={0}
          type="button"
        >
          widthSizingType: 
          <strong>
            '
            minTarget
            '
          </strong>
        </button>
      </div>
    </div>
  </div>
  <div
    className="fd-popover"
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <button
          aria-controls="fd-mocked-short-id"
          aria-expanded={false}
          aria-haspopup={true}
          className="fd-button"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex={0}
          type="button"
        >
          widthSizingType: 
          <strong>
            '
            maxTarget
            '
          </strong>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Component API/Popover With Custom Flip Container 1`] = `
<div
  dir="ltr"
>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
      }
    }
  >
    <div
      style={
        Object {
          "backgroundColor": "#444",
          "height": "120px",
          "width": "180px",
        }
      }
    />
    <div
      style={
        Object {
          "border": "1px solid black",
          "padding": "220px 140px 250px 40px",
        }
      }
    >
      <div
        className="fd-popover"
      >
        <div
          onFocus={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
        >
          <div
            className="fd-popover__control"
          >
            <button
              aria-controls="fd-mocked-short-id"
              aria-expanded={false}
              aria-haspopup={true}
              className="fd-button fd-button--transparent sap-icon--navigation-up-arrow"
              onClick={[Function]}
              onKeyPress={[Function]}
              role="button"
              tabIndex={0}
              type="button"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
